# ofd2img

./: .gitignore  LICENSE  README.md  main.py  ofd_convert.py  ofd_test.py  pangocairo-check.py  pyproject.toml  requirements.txt
core/: constants.py  document.py  resources.py  surface.py
